finished header static

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- bootstrap 4 link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<!-- END bootstrap 4 link -->
 	<link rel="stylesheet" href="css/main.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body>
-	Hello World !  hiii
+	<header class="d-flex align-items-start">
+
+			<div class="infoAboutFilm">
+				<nav>
+					<ul class="d-flex flex-column">
+						<li><span>DEADPOOL</span></li>
+						<li><span>2016</span></li>
+						<li><span>USA</span></li>
+						<li><span>18+</span></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="deadpoolHeader">
+				<img class="img-fluid" src="images/deadpool.png" alt="deadpool">
+			</div>
+			<div class="nav d-flex flex-column align-items-center">
+				<div class="logo d-flex align-items-center flex-column">
+					<img width="70" height="70" src="images/logo.svg" alt="logo">
+					<span>spike</span>
+				</div>
+				<div class="menu">
+					<nav>
+						<ul>
+							<li><a href="#">Все кино</a></li>
+							<li><a href="#">Рейтинги</a>
+							<li><a href="#">Общение</a></li>
+							<li><a href="#">Войти</a></li></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+
+	</header>
+
+
+	<!-- bootstrap 4 script -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	<!--END bootstrap 4 script -->
+
+	<script src="js/main.js"></script>
 </body>
 </html>
