almost made preview block into main section

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,27 @@
 
 	</header>
 
+	<main>
+		<div class="previewFilm">
+			<div class="descrptFilm d-flex ">
+				<div class="descrotFilm__img">
+					<img src="images/deadpool-poster.svg" alt="deadpool-poster">
+				</div>
+				<div class="descrptFilm__text">
+					<p>
+						Уэйд Уилсон — наёмник. Будучи побочным продуктом программы вооружённых сил под названием «Оружие X», Уилсон приобрёл невероятную силу, проворство и способность к исцелению. Но страшной ценой: его клеточная структура постоянно меняется, а здравомыслие сомнительно. Всё, чего Уилсон хочет, — это держаться на плаву в социальной выгребной яме. Но течение в ней слишком быстрое.
+					</p>
+				</div>	
+			</div>
+			<div class="reviewsFilm container d-flex align-items-center">
+				<span>Рецензии:</span>
+				<span>266 <br> положительных</span>
+				<span>41 <br> нейтральная</span>
+				<span>66 <br> отрицательных</span>
+			</div>
+		</div>
+	</main>
+
 
 	<!-- bootstrap 4 script -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
