finished oneMomentFromFilm block

--- a/app/index.html
+++ b/app/index.html
@@ -56,13 +56,19 @@
 					</p>
 				</div>	
 			</div>
-			<div class="reviewsFilm container d-flex align-items-center">
+			<div class="reviewsFilm d-flex align-items-center justify-content-between">
 				<span>Рецензии:</span>
 				<span>266 <br> положительных</span>
 				<span>41 <br> нейтральная</span>
 				<span>66 <br> отрицательных</span>
 			</div>
 		</div>
+		<div class="momentFromFilm__wrapper">
+			<div class="momentFromFilm">
+				<img class="img-fluid" src="images/momentFromFilm.jpg" alt="momentFromFilm">
+				<img class="play img-fluid" src="images/play.svg" alt="play video">
+			</div>
+		</div>	
 	</main>
 
 
