--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	
+	<link rel="stylesheet" href="css/animate.css">
 	<!-- bootstrap 4 link ------------------------------------------------------------------------------------------- -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
@@ -57,7 +58,7 @@
 				</nav>
 			</div>
 
-			<div class="deadpoolHeader d-flex justify-content-center col-lg-8 col-10">
+			<div class="deadpoolHeader   d-flex justify-content-center col-lg-8 col-10">
 				<img class="img-fluid" src="images/deadpool.png" alt="deadpool">
 			</div>
 
